--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -17,7 +17,7 @@ and open the template in the editor.
     -fx-stroke: #50ff00;
 }
 
-#mainAnchor{
+#AnchorPane{
     -fx-background-color: #303030;
 }
 
