--- a/src/ultimatettt/gui/view/Main.fxml
+++ b/src/ultimatettt/gui/view/Main.fxml
@@ -4,38 +4,53 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="571.0" prefWidth="500.0" stylesheets="@../css/main.css" style="-fx-background-color: #73676B;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
+<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="550.0" prefWidth="500.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
    <children>
-      <AnchorPane layoutY="2.0" prefHeight="63.0" prefWidth="500.0">
+      <VBox layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label fx:id="mainLabel" alignment="CENTER" contentDisplay="CENTER" layoutY="8.0" prefHeight="47.0" prefWidth="212.0" text="Player vs Player">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
-            <Label layoutX="371.0" layoutY="12.0" prefHeight="39.0" prefWidth="5.0" text=":">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="271.0" layoutY="12.0" prefHeight="39.0" prefWidth="100.0" text="X - 0">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="377.0" layoutY="12.0" prefHeight="39.0" prefWidth="100.0" text="O - 0">
-               <font>
-                  <Font size="27.0" />
-               </font>
-            </Label>
-         </children></AnchorPane>
-      <AnchorPane layoutY="71.0" prefHeight="500.0" prefWidth="500.0">
-         <children>
-            <GridPane fx:id="mainGride" prefHeight="500.0" prefWidth="500.0" style="-fx-padding: 5;">
+            <HBox alignment="CENTER_LEFT" minHeight="50.0">
+               <children>
+                  <StackPane alignment="CENTER_LEFT" prefWidth="10000.0">
+                     <children>
+                        <Label fx:id="mainLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="250.0" text="Player vs Player">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </StackPane>
+                  <StackPane alignment="CENTER_RIGHT" prefWidth="10000.0">
+                     <children>
+                        <HBox alignment="CENTER_RIGHT">
+                           <children>
+                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="100.0" text="X - 0">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="39.0" prefWidth="5.0" text=":">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="100.0" text="O - 0">
+                                 <font>
+                                    <Font size="27.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </children>
+                  </StackPane>
+               </children>
+            </HBox>
+            <GridPane fx:id="mainGride" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="10000.0" prefWidth="10000.0" style="-fx-padding: 5;">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -293,6 +308,6 @@
                </children>
             </GridPane>
          </children>
-      </AnchorPane>
+      </VBox>
    </children>
 </AnchorPane>
