--- a/src/ultimatettt/gui/css/main.css
+++ b/src/ultimatettt/gui/css/main.css
@@ -21,6 +21,7 @@ and open the template in the editor.
 .label{
     -fx-font-family: 'Luckiest Guy', cursive;
     -fx-text-fill: black;
+    -fx-font-size: 27;
 }
 
 .button{
