--- a/src/ultimatettt/gui/view/Main.fxml
+++ b/src/ultimatettt/gui/view/Main.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="550.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
+<AnchorPane id="AnchorPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="550.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ultimatettt.gui.controller.MainController">
    <children>
       <VBox layoutY="10.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -30,21 +30,19 @@
                      <children>
                         <HBox alignment="CENTER_RIGHT">
                            <children>
-                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="100.0" style="-fx-text-fill: #00ffff;" text="X - 0" fx:id="xScore">
+                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="50.0" style="-fx-text-fill: #00ffff;" text="X  - " />
+                              <Label alignment="CENTER" prefHeight="48.0" prefWidth="6.0" style="-fx-text-fill: #00ffff;" text="0" fx:id="xScore" />
+                              <Label alignment="CENTER" prefHeight="39.0" prefWidth="22.0" text=":">
                                  <font>
                                     <Font size="27.0" />
                                  </font>
                               </Label>
-                              <Label prefHeight="39.0" prefWidth="5.0" text=":">
+                              <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="57.0" style="-fx-text-fill: #50ff00;" text=" O  -  ">
                                  <font>
                                     <Font size="27.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="oScore" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="100.0" style="-fx-text-fill: #50ff00;" text="O - 0">
-                                 <font>
-                                    <Font size="27.0" />
-                                 </font>
-                              </Label>
+                              <Label fx:id="oScore" prefHeight="36.0" prefWidth="46.0" style="-fx-text-fill: #50ff00;" text="0" />
                            </children>
                         </HBox>
                      </children>
